# rust-microservice

./: README.md
crates/: .rustfmt.toml  Cargo.toml
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
